/**
 * Copyright (C) 2018 Nordstrom, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.nordstrom.gtm.servicedeployment";
option java_outer_classname = "ServiceDeploymentProto";

package nordstrom.gtm.servicedeployment;

message AsgInfo {
  string tag_key = 1;
  string tag_value = 2;
}

message IpAddressesInfo {
  repeated string ip_address = 1;
}

message StartRoutingRequest {
  reserved 3, 4, 6;

  oneof mode {
    AsgInfo asg_info = 1;
    IpAddressesInfo ip_addresses_info = 2;
  }
  string deploy_target_key = 7;
  uint32 port_number = 5;
}

message DeployedService {
  reserved 1;

  string deployment_key = 2;
}

service ServiceDeployment {
  rpc StartRouting (StartRoutingRequest) returns (DeployedService);
  rpc StopRouting (DeployedService) returns (google.protobuf.Empty);
}
